--- a/BundlingandMinification/Views/Home/Index.cshtml
+++ b/BundlingandMinification/Views/Home/Index.cshtml
@@ -11,12 +11,13 @@
     <title>Index</title>
     <script src="~/Content/Script/JavaScript.js"></script>
     @*<script src="~/Content/Script/JavaScript1.js"></script>
-    <script src="~/Content/Script/JavaScript2.js"></script>
-    <script src="~/Content/Script/JavaScript3.js"></script>
-    <script src="~/Content/Script/JavaScript4.js"></script>
-    <script src="~/Content/Script/JavaScript5.js"></script>*@
+        <script src="~/Content/Script/JavaScript2.js"></script>
+        <script src="~/Content/Script/JavaScript3.js"></script>
+        <script src="~/Content/Script/JavaScript4.js"></script>
+        <script src="~/Content/Script/JavaScript5.js"></script>*@
 
     @Scripts.Render("~/Bundle/js")
+    @Styles.Render("~/Bundle/css")
 
 </head>
 <body>
