--- a/BundlingandMinification/Views/Home/Index.cshtml
+++ b/BundlingandMinification/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div>
-        <h1>This is Index Page from Home Controller</h1>
+        <p>This is Index Page from Home Controller</p>
     </div>
 </body>
 </html>
